# python-seo-analyzer

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.docker.md  README.md  analyze.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: docker-build-push.yml  docker-publish.yml  pypi-publish.yml
pyseoanalyzer/: __init__.py  __main__.py  analyzer.py  http.py  llm_analyst.py  page.py  stemmer.py  stopwords.py  website.py
seoanalyzer/: __init__.py  __main__.py  analyzer.py  generate_html.py  http.py  page.py  seoanalyze  stemmer.py  website.py
seoanalyzer/templates/: index.html
tests/: test_analyzer.py  test_http.py  test_llm_analyst.py  test_page.py
