[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyseoanalyzer"
version = "2024.04.21"
authors = [
  {name = "Seth Black", email = "sblack@sethserver.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.2.2",
    "Jinja2>=3.1.3",
    "lxml>=5.2.1",
    "MarkupSafe>=2.1.5",
    "urllib3>=2.2.1",
]
requires-python = ">= 3.8"
description = "An SEO tool that analyzes the structure of a site, crawls the site, count words in the body of the site and warns of any technical SEO issues."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "search engine optimization",
    "seo",
    "website parser",
    "crawler",
    "scraper",
    "site analyzer",
    "site parser",
    "site crawler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
seoanalyze = "pyseoanalyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/sethblack/python-seo-analyzer"
Repository = "https://github.com/sethblack/python-seo-analyzer.git"
Issues = "https://github.com/sethblack/python-seo-analyzer/issues"