[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyseoanalyzer"
version = "2025.4.3"
authors = [
  {name = "Seth Black", email = "sblack@sethserver.com"},
]
dependencies = [
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "Jinja2==3.1.6",
    "langchain==0.3.50",
    "langchain-anthropic==0.3.10",
    "lxml==5.3.1",
    "MarkupSafe==3.0.2",
    "python-dotenv==1.1.0",
    "trafilatura==2.0.0",
    "urllib3==2.3.0",
]
requires-python = ">= 3.8"
description = "An SEO tool that analyzes the structure of a site, crawls the site, count words in the body of the site and warns of any technical SEO issues."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "search engine optimization",
    "seo",
    "website parser",
    "crawler",
    "scraper",
    "site analyzer",
    "site parser",
    "site crawler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
python-seo-analyzer = "pyseoanalyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/sethblack/python-seo-analyzer"
Repository = "https://github.com/sethblack/python-seo-analyzer.git"
Issues = "https://github.com/sethblack/python-seo-analyzer/issues"
